# SAPPHIRE_flow

./: .dependency-safety-allowlist  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  README.md  config.toml  docker-compose.dev.yml  docker-compose.macmini-nwp.yml  docker-compose.macmini.yml  docker-compose.recap.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json
.claude/: settings.json  workflow-capabilities.json
.claude/agents/: design-reviewer.md  plan-reviewer.md  review-cicd.md  review-data-eng.md  review-developer.md  review-docs.md  review-domain.md  review-ops.md  review-security.md  review-testing.md
.claude/commands/: plan.md  review.md
.claude/workflows/: implement.js  plan-review.js  plan.js
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-safety.yml  integration-nightly.yml  integration-slow-nightly.yml  live-lindas-weekly-autoretry.yml  live-lindas-weekly.yml
alembic/: env.py
alembic/versions/: 0001_v0_schema.py  0002_add_qc_missing_status.py  0003_add_network_and_ownership.py  0004_add_historical_forcing.py  0005_fix_weather_forecast_index.py  0006_rename_flow_regime_percentiles.py  0007_models_description_not_null.py  0008_add_constraints_indexes_columns.py  0009_bool_to_enum_conversions.py  0010_add_supporting_indexes.py  0011_add_clim_baselines.py  0012_add_forecast_qc_columns.py  0013_lake_support.py  0014_rename_forecast_target_to_targets.py  0015_hindcast_parameter_index.py  0016_skill_parameter_column.py  0017_widen_forecast_unique_index.py  0018_alert_model_fields.py  0019_add_gauging_status_nullable.py  0020_gauging_status_not_null.py  0021_add_group_model_assignments.py  0022_add_sha256_hash_to_model_artifacts.py  0023_add_regional_basin_and_unique_constraint.py  0024_add_combination_columns.py  0025_historical_forcing_clock_timestamp_default.py  0026_forecast_provenance_runoff_only.py  0027_station_water_level_datum.py  0028_orphan_header_cleanup.py  0029_hindcast_dedup_constraint.py  0030_weather_source_role.py  0031_seed_relative_sunshine_duration_parameter.py  0032_recap_gateway_polygon_bindings.py  0033_retire_camels_ch_weather_binding.py  0034_rating_curves_table.py  0035_observation_forecast_rating_curve_binding.py  0036_observation_versions_table.py  0037_calculated_station_formulas.py  0038_calculated_station_formula_trigger.py  0039_basin_static_provenance.py  0040_basin_static_package_fingerprint.py  (+7 more)
config/overlays/: mac-mini-nwp.toml  mac-mini.toml  staging-5-stations.toml
docker/: bootstrap-roles.sh  bootstrap-roles.sql  entrypoint.sh
docs/: architecture-context.md  conventions.md  deployment-quickstart.md  planning-steps.md  secrets-bootstrap.md  touchpoint-maps.md  v0-launch-roadmap.md  v0-scope.md  workflow.md
docs/business/: paid-services.md
docs/decisions/: bafu-lindas-monday-window.md
docs/deployment/: dress-rehearsal-2026-04-21.md  mac-mini-staging.md
docs/design/: 00-overview.md  01-architecture.md  02-data-model.md  03-adapters.md  04-models.md  05-flows.md  06-api.md  07-deployment.md  08-testing-cicd.md  design-fixes-plan.md  forecast-cycle-redesign.md  hydromet-qa-prep.md  v0-flow13-model-onboarding.md  v0-flow2-observation-pipeline.md  v0-flow678-training-pipeline.md  v1-forecasting-decisions.md  v1-nepal-modelling.md
docs/handover/: README.md  data-flows.md  data-model.md  hydrology-operations.md  it-operations.md
docs/operations/: basin-static-importer-runbook.md  recap-gateway-runbook.md  recap-probe-runbook.md
docs/plans/: 001-propagate-onboarding-types.md  002-fix-station-ids-ordering.md  003-multi-target-predict-chain.md  004-skill-score-parameter-field.md  005-operational-forecast-multi-target.md  006-onboarding-type-fixes.md  007-align-source-with-renamed-fields.md  008-group-model-inputs.md  009-parameter-extensibility.md  010-multi-model-alert-strategy.md  011-interface-virtual-stations-and-gaps.md  012-forecast-qc-flow1-integration.md  013-v0-scale-re-evaluation.md  014-forecast-interface-adapter-design.md  015-virtual-station-support.md  016-logging-underscore-override-fix.md  016-ungauged-station-support.md  017-manual-automatic-station-support.md  018-artifact-sha256-verification.md  019-phase3-bafu-prefect-adapters.md  020-phase3-replay-recording.md  021-phase3-meteoswiss-adapters.md  023-degraded-forecast-input-quality.md  024-basin-regional-grouping.md  024-forecast-cycle.md  025-multi-model-combination-forecasting.md  026-multi-model-combination-implementation.md  028-test-coverage-gaps.md  029-lindas-adapter-fix.md  032-hindcast-performance.md  033-dashboard-improvements.md  035-rating-curve-provenance.md  037-security-audit.md  038-store-write-atomicity.md  039-alert-data-unavailable-status.md  040-hindcast-dedup-constraint.md  041-phase9-fastapi-rest-api.md  042-api-auth-client-sdk.md  043-phase11-e2e-test-quality.md  044-deployment-readiness.md  (+107 more)
docs/publication/: publication-plan.md
docs/requirements/: 00-internal-gap-analysis.md  01-data-gateway-requirements.md  02-forecast-interface-requirements.md  03-forecast-interface-adherence.md  04-basin-static-artifact-contract.md  DFL_Dummy Station A.txt  GHT_Dummy Station A.txt  README.md  RT_Dummy Station A.txt  basin-static-extraction-brief.md  dhm-data-formats-questions.docx  dhm-data-formats-questions.md
docs/research/: 063-meteoswiss-stac-probe.md
docs/spec/: config-reference.toml  database-schema.md  implementation-plan.md  types-and-protocols.md
docs/standards/: cicd.md  logging.md  orchestration.md  pyright.md  security.md  wmo.md
notebooks/: 01_data_inspection.ipynb
scripts/: 063_e2e_verify.py  audit_distribution_shift.py  backfill_meteoswiss_history.py  bootstrap-mac-mini.sh  check_readiness.py  onboard.py  plan100_forecast_feed_resilience.py  recap_probe_loop.py  regenerate_icon_grid_asset.py  validate_forcing_reference.py
tests/: conftest.py
tools/: dependency_safety.py  gate_parity_check.py  pyright_baseline.json  pyright_baseline.py  pyright_ratchet.py
(+561 files in other folders)
