[project]
name = "sapphire-flow"
version = "0.1.418"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Beatrice Marti", email = "mabesa@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "camelsch>=0.2.0",
    "cfgrib>=0.9.15.1",
    "cryptography>=46.0.7",
    "dask[array]>=2024.1.0",
    "eccodes>=2.46.0",
    "exactextract>=0.3",
    "fastapi>=0.135.2",
    "geoalchemy2>=0.18.4",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mako>=1.3.11",
    "numcodecs>=0.16.1,<0.17",
    "numpy>=2.4.3",
    "orjson",
    "platformdirs>=4.0",
    "polars",
    "prefect>=3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pygments>=2.20.0",
    "requests>=2.33.1",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.8.0",
    "shapely",
    "sqlalchemy>=2.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.42.0",
    "xarray>=2026.04.0",
    "zarr>=3.0,<4",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asyncpg",
    "bump-my-version>=1.2.7",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "notebook>=7.5.5",
    "plotly>=6.6.0",
    "pyright",
    "pytest>=9.0.2",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
    "testcontainers[postgres]",
]

[tool.uv]
required-version = "==0.11.7"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/sapphire_flow/api/**/*.py" = ["B008", "TCH002", "TCH003"]
"scripts/**/*.py" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "deployment: requires a full compose stack; excluded by default",
    "deployment_destructive: destructive compose tests; excluded by default",
    "live: tests that hit external APIs and are excluded from default CI (run nightly)",
    "live_lindas: calls live LINDAS endpoint; excluded by default, run by weekly workflow",
    "live_stac: calls live MeteoSwiss STAC endpoint; excluded by default, run manually or on a schedule",
    "slow: long-running tests excluded from default CI integration job (runs nightly)",
]
addopts = "-m 'not deployment and not live and not live_lindas and not live_stac and not slow'"

[tool.bumpversion]
current_version = "0.1.418"
commit = false
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/sapphire_flow/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[project.entry-points."sapphire_flow.models"]
linear_regression_daily = "sapphire_flow.models.linear_regression_daily:LinearRegressionDaily"
climatology_fallback = "sapphire_flow.models.climatology_fallback:ClimatologyFallbackModel"
persistence_fallback = "sapphire_flow.models.persistence_fallback:PersistenceFallbackModel"
