[project]
name = "sapphire-flow"
version = "0.1.635"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Beatrice Marti", email = "mabesa@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "camelsch>=0.2.0",
    "cfgrib>=0.9.15.1",
    "cryptography>=48.0.1",
    "dask[array]>=2024.1.0",
    "eccodes>=2.46.0",
    "exactextract>=0.3",
    "fastapi>=0.135.2",
    "forecastinterface",
    "geoalchemy2>=0.18.4",
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mako>=1.3.11",
    "numcodecs>=0.16.1,<0.17",
    "numpy>=2.4.3",
    "orjson",
    "platformdirs>=4.0",
    "polars",
    "prefect>=3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pygments>=2.20.0",
    "recap-dg-client",
    "requests>=2.33.1",
    "rioxarray>=0.19.0",
    "scikit-learn>=1.8.0",
    "shapely",
    "sqlalchemy>=2.0",
    "starlette>=1.3.1",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.42.0",
    "xarray>=2026.04.0",
    "zarr>=3.0,<4",
]

[project.scripts]
check = "sapphire_flow.cli.check:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asyncpg",
    "bump-my-version>=1.2.7",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "notebook>=7.5.5",
    "plotly>=6.6.0",
    "pre-commit>=4.6.0",
    "pyright",
    "pytest>=9.0.2",
    "pytest-asyncio",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
    "testcontainers[postgres]",
]

[tool.uv]
required-version = "==0.11.7"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
forecastinterface = { git = "https://github.com/hydrosolutions/ForecastInterface.git", rev = "v0.1.17" }
recap-dg-client = { git = "https://github.com/hydrosolutions/recap-dg-client.git", rev = "60e5d736dec663d013ce2c05a6f067b82254cd7f" }

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/sapphire_flow/api/**/*.py" = ["B008", "TCH002", "TCH003"]
"scripts/**/*.py" = ["T201"]
"tools/**/*.py" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "deployment: requires a full compose stack; excluded by default",
    "deployment_destructive: destructive compose tests; excluded by default",
    "live: tests that hit external APIs and are excluded from default CI (run nightly)",
    "live_lindas: calls live LINDAS endpoint; excluded by default, run by weekly workflow",
    "live_stac: calls live MeteoSwiss STAC endpoint; excluded by default, run manually or on a schedule",
    "live_recap: calls live recap Data Gateway; excluded by default (needs RECAP_API_KEY)",
    "slow: long-running tests excluded from default CI integration job (runs nightly)",
]
addopts = "-m 'not deployment and not live and not live_lindas and not live_stac and not slow'"

[tool.bumpversion]
current_version = "0.1.635"
commit = false
tag = false
allow_dirty = true
# pre_commit_hooks runs after the bumped files are written and before
# bump-my-version's (disabled) commit step. With commit = false, this is
# effectively a "post-bump" hook: re-resolve the lockfile so the
# sapphire-flow self-entry in uv.lock matches the new pyproject.toml
# version. Prevents the recurring "uv.lock stamped at version N-1 while
# pyproject is at N" drift that produced v0.1.425 and v0.1.428 alignment
# commits.
pre_commit_hooks = ["uv lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/sapphire_flow/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[project.entry-points."sapphire_flow.models"]
linear_regression_daily = "sapphire_flow.models.linear_regression_daily:LinearRegressionDaily"
climatology_fallback = "sapphire_flow.models.climatology_fallback:ClimatologyFallbackModel"
persistence_fallback = "sapphire_flow.models.persistence_fallback:PersistenceFallbackModel"
nwp_regression = "sapphire_flow.models.nwp_regression:NwpRegression"
nwp_rainfall_runoff = "sapphire_flow.models.nwp_regression:NwpRainfallRunoff"
